external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_arg_by_name_invalid_usage_value.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macro_arg_by_name_invalid_usage_value.move:4:14
  │
4 │         copy $x;
  │              ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let x = $x;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/typing/macro_arg_by_name_invalid_usage_value.move:5:14
  │
5 │         move $x;
  │              ^^ Macro parameters are not allowed to appear in paths
  │
  = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let x = $x;'
  = Macro parameters are always treated as value expressions, and are not modified by path operations.
    Path operations include 'move', 'copy', '&', '&mut', and field references

warning[W09005]: dead or unreachable code
  ┌─ tests/move_2024/typing/macro_arg_by_name_invalid_usage_value.move:9:14
  │
9 │         foo!(0);
  │              ^ Unused macro argument. Its expression will not be type checked and it will not evaluated
  │
  = This warning can be suppressed with '#[allow(dead_code)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

